--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "hbs": "~3.1.0",
     "jimp": "^0.2.27",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "pureimage": "0.0.17",
+    "request": "^2.81.0",
+    "serve-favicon": "~2.3.0",
+    "twitter": "^1.7.0"
   }
 }
